$Id$

2014-03-03  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Remove bashisms from
	shell script examples.

2014-03-03  Christian Franke  <franke@computer.org>

	Makefile.am, os_win32/smart*_res.rc.in: Set Copyright year in
	Windows VERSIONINFO resource.

2014-03-03  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix glob(3) max path count (ticket #317).

2014-03-03  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am: Add '--with-systemdenvfile=[FILE|no]'
	configure option to change or remove (ticket #316) the systemd
	EnvironmentFile setting.
	smartd.service.in: Add a reference to documentation (ticket #316).

2014-02-18  Alex Samorukov  <samm@os2.kiev.ua>
	os_freebsd.cpp: use %lu for iop->resp_sense_len

2014-02-16  Alex Samorukov  <samm@os2.kiev.ua>
	os_freebsd.cpp: mass updates, provided by Tijl Coosemans
	- Remove some unused private fields from some classes (found by Clang)
	- In freebsd_scsi_device::scsi_pass_through:
	* Make sure this function returns false on error instead of an error
	  code that gets converted to true.
	* Put printing of the "Incoming data" debug info right after the
	  cam_send_ccb() call and before the error checking to make debugging 
	  easier.
	* When copying sense data make sure the fields in the CCB are actually
	  valid with CAM_AUTOSNS_VALID.  Also make sure that the size of the 
	  sense data doesn't overflow max_sense_len.  This was the real cause for
	  the crash in ports/181836.
	* Add some debug printing on the sense data.

2014-02-03  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Check cmds index before use (ticket #312).
	Make cmds array static const.

2014-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2013-12-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 525 Series SSDs
	- Intel 530 Series SSDs (ticket #308)

2013-12-19  Christian Franke  <franke@computer.org>
