@@ -2618,35 +2618,22 @@ int ataPrintMain (ata_device * device, const ata_print_options & options)
   if (options.get_security)
     print_ata_security_status("ATA Security is:  ", drive.words088_255[128-88]);
 
-  // Check if SCT commands available
-  bool sct_ok = false;
-  if (need_sct_support) {
-    if (!isSCTCapable(&drive)) {
-      failuretest(OPTIONAL_CMD, returnval|=FAILSMART);
+  // Print write cache reordering status
+  if (options.sct_wcache_reorder_get) {
+    if (isSCTFeatureControlCapable(&drive)) {
+      int wcache_reorder = ataGetSetSCTWriteCacheReordering(device,
+        false /*enable*/, false /*persistent*/, false /*set*/);
+
+      if (-1 <= wcache_reorder && wcache_reorder <= 2)
+        pout("Wt Cache Reorder: %s\n",
+          (wcache_reorder == -1 ? "Unknown (SCT Feature Control command failed)" :
+           wcache_reorder == 0  ? "Unknown" : // not defined in standard but returned on some drives if not set
+           wcache_reorder == 1  ? "Enabled" : "Disabled"));
+      else
+        pout("Wt Cache Reorder: Unknown (0x%02x)\n", wcache_reorder);
     }
     else
-      sct_ok = true;
-  }
-
-  // Print write cache reordering status
-  if (sct_ok && options.sct_wcache_reorder_get) {
-    int wcache_reorder=ataGetSetSCTWriteCacheReordering(device,
-      false /* enable */, false /* persistent */, false /*set*/);
-      pout("Wt Cache Reorder: ");
-      switch(wcache_reorder) {
-        case 0: /* not defined in standard but returned on some drives if not set */
-        pout("Unknown"); break;
-        case 1:
-        pout("Enabled"); break;
-        case 2:
-        pout("Disabled"); break;
-        default: /* error? */
-        pout("N/A"); break;
-      }
-      pout("\n");
-  }
-  if (!sct_ok && options.sct_wcache_reorder_get) {
-    pout("Wt Cache Reorder: Unavailable\n");
+      pout("Wt Cache Reorder: Unavailable\n");
   }
 
   // Print remaining drive info
@@ -2733,15 +2720,15 @@ int ataPrintMain (ata_device * device, const ata_print_options & options)
   }
 
   // Enable/Disable write cache reordering
-  if (sct_ok && options.sct_wcache_reorder_set) {
+  if (options.sct_wcache_reorder_set) {
     bool enable = (options.sct_wcache_reorder_set > 0);
-
-    int wcache_reorder=ataGetSetSCTWriteCacheReordering(device,
-      enable, false /* persistent */, true /*set*/);
-
-    if (wcache_reorder < 0) {
-        pout("Write cache reordering %sable failed: %s\n", (enable ? "en" : "dis"), device->get_errmsg());
-        returnval |= FAILSMART;
+    if (!isSCTFeatureControlCapable(&drive))
+      pout("Write cache reordering %sable failed: SCT Feature Control command not supported\n",
+        (enable ? "en" : "dis"));
+    else if (ataGetSetSCTWriteCacheReordering(device,
+               enable, false /*persistent*/, true /*set*/) < 0) {
+      pout("Write cache reordering %sable failed: %s\n", (enable ? "en" : "dis"), device->get_errmsg());
+      returnval |= FAILSMART;
     }
     else
       pout("Write cache reordering %sabled\n", (enable ? "en" : "dis"));
@@ -3217,6 +3204,8 @@ int ataPrintMain (ata_device * device, const ata_print_options & options)
     }
   }
 
+  // Check if SCT commands available
+  bool sct_ok = isSCTCapable(&drive);
   if(!sct_ok && (options.sct_temp_sts || options.sct_temp_hist || options.sct_temp_int
                  || options.sct_erc_get || options.sct_erc_set                        ))
     pout("SCT Commands not supported\n\n");
